move recipes to a folder and move imgs folder inside recipes folder, add a new recipe "buffalo"

--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
     <body>
         <h1>Odin Recipes</h1>
         <ul>
-            <li><a href="./Guacamole.html">Guacamole</a></li>
-            <li><p> <a href="./hotSpinach.html">Hot Spinach Sauce</a></li>
+            <li><a href="./recipesPages/guacamole.html">Guacamole</a></li>
+            <li><p> <a href="./recipesPages/hotSpinach.html">Hot Spinach Sauce</a></li>
+                <li><p> <a href="./recipesPages/bakedBuffalo.html">Baked Buffalo</a></li>
         </ul>    
         </body>
 </html>
